<resources>
    <string name="app_name">My GitHub User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="profile">Profile</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="location">location</string>
    <string name="company">company</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_follower">Follower</string>
    <string name="content_tab_following">Following</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="desc_company_logo">Company Logo</string>
    <string name="desc_location_logo">Location Logo</string>
    <string name="iv_splash_screen">Icon Launcher on Splash Screen</string>
    <string name="key_username">username</string>
    <string name="nothing">Not set yet</string>
    <string name="key_night_mode">night</string>
    <string name="is_night_mode">Night Mode</string>
    <string name="setting">Setting</string>
    <string name="tv_description">Description</string>
    <string name="tv_repo_fullname">Fullname</string>
    <string name="tv_language">Language</string>
    <string name="toggle_fav">Favourited Toggle</string>
</resources>