<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/menu_fav"
            android:title="@string/toggle_fav"
            android:icon="@drawable/ic_fav_yes"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/menu_setting"
            android:title="@string/setting"
            android:icon="@drawable/ic_settings"
            app:showAsAction="ifRoom" />
    </group>
</menu>