<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="16dp">

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repository"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_fullname" />

    <TextView
        android:id="@+id/tv_repo_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_description"
        android:textColor="@color/secondaryTextColor"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_name" />

    <TextView
        android:id="@+id/tv_repo_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_repo_fullname"
        android:textColor="@color/secondaryTextColor"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_repo_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_language"
        android:textColor="@color/secondaryTextColor"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_desc" />

    <TextView
        android:id="@+id/tv_repo_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/secondaryTextColor"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/tv_repo_language"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_desc"
        tools:text="10K"
        app:drawableStartCompat="@drawable/ic_star" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/primaryLightColor"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_language" />
</androidx.constraintlayout.widget.ConstraintLayout>