<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primaryColor"
    tools:context=".activity.DetailUserActivity">

    <LinearLayout
        android:id="@+id/jumbotron"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jumbotron"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="16dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primaryLightColor"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_username_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textColor="@color/secondaryTextColor"
                    android:textSize="12sp" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_repo"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="10k" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/repository"
                    android:textColor="@color/secondaryTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="10k" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/followers"
                    android:textColor="@color/secondaryTextColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                tools:ignore="UselessLeaf" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    tools:text="10k"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/following"
                    android:textColor="@color/secondaryTextColor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/company"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/company_icon" />

            <TextView
                android:id="@+id/tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:ellipsize="end"
                android:lines="1"
                android:text="@string/location"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                android:layout_marginBottom="5dp"
                app:drawableStartCompat="@drawable/location_icon" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/card_profile">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:tabTextColor="@color/primaryTextColor"
            app:tabIndicatorColor="@color/primaryLightColor"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


</RelativeLayout>